		Vibrospear
		Fireproof armor, some dragonhide
		Flamethrower
			Sprays burning oil splashes doing (6+multishot bonus)d6
			Uses a charge system and uses 1 charge per use
	Eth ana - 
		Etherblade
			Polearm type weapon, can be used in melee
			3d6 vs small and large
			Can be charged and fired with F to shoot a 3d6 blast of darkness
		+5 ring of protection
		Can get expert in polearms and darts
Added armorsmiths
		Armorsmiths are meant to address the weird gap caused by
		upgrade kits for strangely sized races
		Maybe you'll find one in an adventure town
		Charge a price to provide various services
		Armor repair
			Remove damage from armor
		Shrink armor
			Lowers the size of an armor piece by 1 level
		Grow armor
			Increases the size of an armor piece by 1 level
			Requires an armor piece of the same type to be
			combined
		Change Shape
			Change the shape (barded/segmented/centaur) of a piece
			of armor
			Requires a corpse or figurine reference item if not using your shape
		Scales to Shield
			Turns dragon scales into the equivalent shield without requiring
			wearing it. -- useful for eths
Dungeon Changes
	Added adventure branches and the village
		Dlvl4 is now a village of friendlies of your race
			4 different variants that race helps select
		Talk to the travelling wizard to open a portal to a branch
		Five branches with unique prizes and enemies
			Ice Caves
				Fight the abominable snowman for the
				abominable veil
					cold res cloak of discplacement
			Black Forest
				Fight the tulip poplar for the poplar punisher
					+2d6 dmg quarterstaff
			Gnomish Mines
				Fight Raggo the Gnome King, Ruggo's crazed brother 
				for his lucky pet rock
			Dismal Swamp
				Fight Kroo the Kobold King and his court
					very fast speed ring of poison
					resistance
			Archipelago
				Fight the ancient something and his tentacles
					emerald with slotless magical
					breathing and swimming
		Go play and find out!