@@ -738,6 +738,7 @@ E void FDECL(impact_drop, (struct obj *,XCHAR_P,XCHAR_P,XCHAR_P,boolean));
 
 E int FDECL(zap_raygun, (struct obj *,int, int));
 E int FDECL(zap_flamethrower, (struct obj *,int, int));
+E int FDECL(zap_mortar, (struct obj *,int, int, coord *));
 E void FDECL(hurtle, (int,int,int,BOOLEAN_P,BOOLEAN_P));
 E void FDECL(mhurtle, (struct monst *,int,int,int,boolean));
 E int FDECL(hero_breaks, (struct obj *,XCHAR_P,XCHAR_P,BOOLEAN_P));
